@@ -81,6 +81,10 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   registrations as well as self-registrations.
 * (bug 4327) Report age of cached data sets in query pages
 * (bug 4662) Fix Safari check in wikibits.js
+* (bug 4663) Edit toolbar enabled in compatible versions of Safari
+* (bug 5572) Edit toolbar enabled in compatible versions of Konqueror (3.5+)
+* (bug 5235) Edit toolbar tooltips no longer show JavaScript junk in Opera
+* Edit toolbar now works in pure XHTML mode (application/xhtml+xml)
 
 
 == Compatibility ==
